test/should_pass/basic_025.grg
actions basic_025;

test t {
	pattern {
		if { true; }
	}
}

