test/should_fail/inh_008.grg
actions inh_008 using inh_model_008;

rule bla { pattern{} replace{} }
